# OpenGL_glfw

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
src/: main.c
